feat: OAuth provider tracking and email verification improvements
- Add provider field to Usuario entity to track OAuth registration source
- Update AuthService to store provider (google/apple) during social login
- Implement email verification popup for new Google users
- Update linked accounts page to fetch provider from backend
- Clean up CORS configuration and remove redundant code
- Update logging configuration for production
- Add client_secret files to .gitignore